--- a/WebVisualizations/Resources/WebVisHome.html
+++ b/WebVisualizations/Resources/WebVisHome.html
@@ -22,7 +22,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Weather Data</a>
+        <a class="navbar-brand" href="#temperature page path">Weather Data</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
         <div class="row">
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img src="assets/images/Fig1.png" alt="..." class="img-thumbnail">
+                    <img src="assets/images/Fig1.png" alt="..." class="img-thumbnail" href=".html">
                 </div>
                 <div class="caption">
                     <h3>Latitude</h3>
