adding in formatting on home page

--- a/index.html
+++ b/index.html
@@ -64,8 +64,14 @@
     <div class="row">
         <div class="col-md-6">
             <div class="ttle">
-                <h3 class="">Summary: Latitude vs. X</h3>
-                <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="img-thumbnail">
+                <section id="figure">
+                    <h3 class="">Summary: Latitude vs. X</h3>
+                    <hr size='4'>
+                </section>
+                <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="image_one">
+                <section>"a;sldkfajs;dlfkasjd;flaskdjf"
+                </section>
+
             </div>
             <div class="caption">
 
@@ -74,7 +80,7 @@
         <div class="col-md-6">
             <div class="ttle">
                 <h4 class="">Visualizations</h4>
-                <img src="WebVisualizations/assets/images/Fig2.png" alt="..." class="img-thumbnail">
+                <img src="WebVisualizations/assets/images/Fig2.png" alt="..." class="4images">
             </div>
             <div class="caption">
             </div>
