home page final body layout complete

--- a/index.html
+++ b/index.html
@@ -60,38 +60,49 @@
     </nav>
 
 
+    <main>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="left_half">
+                    <section id="figure">
+                        <h3 class="">Summary: Latitude vs. X</h3>
+                        <hr size='4'>
+                    </section>
+                    <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="img_one">
+                    <section>"This project was conducted to understand the impact of weather at varying
+                        latitudes. We understand through experience the temperature is hotter as we approach
+                        the equator, but this analysis sets out to prove this hypothesis. The equator is located
+                        at 0 latitude.
 
-    <div class="row">
-        <div class="col-md-6">
-            <div class="ttle">
-                <section id="figure">
-                    <h3 class="">Summary: Latitude vs. X</h3>
+                        To accomplish this analysis, data was pulled form OpenWeatherMap API to assemble a dataset
+                        on over 500 cities. Multiple weather elements were analyzed to understand these changes. For
+                        example, we chose to compare latitude to
+                        max temperature, humidity, wind speed and cloudiness.
+
+                        To explore the charts, select any chart to the right."
+                    </section>
+
+                </div>
+                <div class="caption">
+
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="right_half">
+                    <h4 class="img_box">Visualizations</h4>
                     <hr size='4'>
-                </section>
-                <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="image_one">
-                <section>"a;sldkfajs;dlfkasjd;flaskdjf"
-                </section>
-
-            </div>
-            <div class="caption">
-
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="ttle">
-                <h4 class="">Visualizations</h4>
-                <img src="WebVisualizations/assets/images/Fig2.png" alt="..." class="4images">
-            </div>
-            <div class="caption">
+                    <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="img img_1">
+                    <img src="WebVisualizations/assets/images/Fig2.png" alt="..." class="img img_2">
+                    <img src="WebVisualizations/assets/images/Fig3.png" alt="..." class="img img_3">
+                    <img src="WebVisualizations/assets/images/Fig4.png" alt="..." class="img img_4">
+                </div>
+                <div class="caption">
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 
 
 </body>
 
 </html>
-
-<a href="Images">
-    <img src="WebVisualizations/assets/images/Fig1.png" alt="..." />
-</a>
