--- a/wind.html
+++ b/wind.html
@@ -67,21 +67,11 @@
             <div class="col-md-6">
                 <div class="left_half">
                     <section id="figure">
-                        <h3 class="">Summary: Latitude vs. X</h3>
+                        <h3 class="">Humidity</h3>
                         <hr size='4'>
                     </section>
-                    <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="img_one">
-                    <section>"This project was conducted to understand the impact of weather at varying
-                        latitudes. We understand through experience the temperature is hotter as we approach
-                        the equator, but this analysis sets out to prove this hypothesis. The equator is located
-                        at 0 latitude.
-
-                        To accomplish this analysis, data was pulled form OpenWeatherMap API to assemble a dataset
-                        on over 500 cities. Multiple weather elements were analyzed to understand these changes. For
-                        example, we chose to compare latitude to
-                        max temperature, humidity, wind speed and cloudiness.
-
-                        To explore the charts, select any chart to the right."
+                    <img src="WebVisualizations/assets/images/Fig2.png" alt="..." class="img_one">
+                    <section>"As expected, the weather becomes significantly warmer as one approaches the equator. As you can see the southern hemisphere trends warmer during the time frame."
                     </section>
 
                 </div>
