--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
+                
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -93,10 +91,21 @@
                 <div class="right_half">
                     <h4 class="img_box">Visualizations</h4>
                     <hr size='4'>
-                    <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="img img_1">
-                    <img src="WebVisualizations/assets/images/Fig2.png" alt="..." class="img img_2">
-                    <img src="WebVisualizations/assets/images/Fig3.png" alt="..." class="img img_3">
-                    <img src="WebVisualizations/assets/images/Fig4.png" alt="..." class="img img_4">
+                    <a href="temp.html">
+                        <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="img img_1">
+                    </a>
+                    <a href="humidity.html">
+                        <img src="WebVisualizations/assets/images/Fig2.png" href="humidity.html" alt="..."
+                            class="img img_2">
+                    </a>
+                    <a href="cloud.html">
+                        <img src="WebVisualizations/assets/images/Fig3.png" href="cloud.html" alt="..."
+                            class="img img_3">
+                    </a>
+                    <a href="wind.html">
+                        <img src="WebVisualizations/assets/images/Fig4.png" href="wind.html" alt="..."
+                            class="img img_4">
+                    </a>
                 </div>
                 <div class="caption">
                 </div>
