--- a/temp.html
+++ b/temp.html
@@ -22,7 +22,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Weather Data</a>
+        <a class="navbar-brand" href="index.html">Weather Data</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="cities.html">Data</a>
@@ -47,9 +47,10 @@
                         <a class="dropdown-item" href="cloud.html">Cloudiness</a>
                         <a class="dropdown-item" href="wind.html">Wind</a>
                         <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
-                
+
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -64,10 +65,10 @@
             <div class="col-md-6">
                 <div class="left_half">
                     <section id="figure">
-                        <h3 class="">Humidity</h3>
+                        <h3 class="">Temperature</h3>
                         <hr size='4'>
                     </section>
-                    <img src="WebVisualizations/assets/images/Fig2.png" alt="..." class="img_one">
+                    <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="img_one">
                     <section>"As expected, the weather becomes significantly warmer as one approaches the equator. As
                         you can see the southern hemisphere trends warmer during the time frame."
                     </section>
@@ -81,10 +82,21 @@
                 <div class="right_half">
                     <h4 class="img_box">Visualizations</h4>
                     <hr size='4'>
-                    <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="img img_1">
-                    <img src="WebVisualizations/assets/images/Fig2.png" alt="..." class="img img_2">
-                    <img src="WebVisualizations/assets/images/Fig3.png" alt="..." class="img img_3">
-                    <img src="WebVisualizations/assets/images/Fig4.png" alt="..." class="img img_4">
+                    <a href="temp.html">
+                        <img src="WebVisualizations/assets/images/Fig1.png" alt="..." class="img img_1">
+                    </a>
+                    <a href="humidity.html">
+                        <img src="WebVisualizations/assets/images/Fig2.png" href="humidity.html" alt="..."
+                            class="img img_2">
+                    </a>
+                    <a href="cloud.html">
+                        <img src="WebVisualizations/assets/images/Fig3.png" href="cloud.html" alt="..."
+                            class="img img_3">
+                    </a>
+                    <a href="wind.html">
+                        <img src="WebVisualizations/assets/images/Fig4.png" href="wind.html" alt="..."
+                            class="img img_4">
+                    </a>
                 </div>
                 <div class="caption">
                 </div>
